--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=springbootApp
+#GENERAL
+server.port=8080
+#
+#DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3307/javacourse?useSSL=false
+spring.datasource.dbname=javacourse
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA / HIBERNATE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#JWT DATA
+security.jwt.secret=ghk450hkdsfh7899416sdfkl
+security.jwt.issuer=Main
+#session duration in milliseconds
+security.jwt.ttlMillis=604800000
